# myzero2prod

./: Cargo.toml  spec.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
