[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but  we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Notice the doubel brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a loko at the workspace feature - we'll cover that later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }


# Using table-like toml syntax to avoid a super long line!
#[dependencies.sqlx]
#version = "0.6"
#default-features = false
#feature = [
#    "runtime-tokio-rustls",
#    "macros",
#    "postgres",
#    "uuid",
#    "chrono",
#    "migrate"
#]
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }

# Dev dependencies are used exclusively when runnning tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"

